colors from doc; spacing fixes

--- a/static/sass/_pattern_global-nav.scss
+++ b/static/sass/_pattern_global-nav.scss
@@ -5,9 +5,9 @@ $ubuntu-logo-width--desktop: $ubuntu-logo-svg-width + 2 * $grid-margin-width;
 $ubuntu-logo-width--mobile: $ubuntu-logo-svg-width + 2 * $sph-intra;
 $p-small-lh-diff: map-get($line-heights, default-text) - map-get($line-heights, small);
 
-$global-nav-bg-color: lighten($color-dark, 8%);
-$global-nav-dropdown-bg-color: lighten($color-dark, 13.55%); //#333
-$nav-bg-color: #333;
+$global-nav-bg-color: #444; //matches Mark's document //lighten($color-dark, 8%);
+$global-nav-dropdown-bg-color: $global-nav-bg-color; //lighten($color-dark, 13.55%); //#333
+$nav-bg-color: #666;
 $color-rule--light: transparentize($color-mid-light, .5);
 
 @mixin global-nav {
