--- a/static/sass/_pattern_lists.scss
+++ b/static/sass/_pattern_lists.scss
@@ -235,7 +235,7 @@
 
   .p-inline-list__item {
     &::after {
-      right: -.65em;
+      // right: -.65em;
       top: calc(.4em + .55rem);
     }
   }
