--- a/static/sass/_pattern_navigation.scss
+++ b/static/sass/_pattern_navigation.scss
@@ -53,6 +53,7 @@
 
           &:hover {
             background-color: $color-x-light;
+            color: $color-dark;
           }
         }
       }
